# studious-tribble

./: .gitignore  .rustfmt.toml  Cargo.toml  README.md  run-and-show  show-big.sh
.github/workflows/: ci.yml  security.yml
src/: camera.rs  color.rs  hitable.rs  image.rs  main.rs  material.rs  ray.rs  scene.rs  scenes.rs  time.rs  vec3.rs
