[package]
name = "chambray"
version = "0.1.0"
authors = ["Jeremy Hooke <jez@stulk.com>"]
edition = "2018"

# Install git hooks so we can only commit when checks pass.
[dev-dependencies.cargo-husky]
version = "1"
default-features = false # Disable features which are enabled by default
features = [
    "precommit-hook",
    "run-cargo-test",
    "run-cargo-clippy",
    "run-cargo-fmt"
]

[profile.release]
# lto = true

# No parallel codegen
# codegen-units = 1

# opt-level = 3

[dependencies]
structopt="0.3"

rand = "0.7"

